--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,48 @@
+alabaster==0.7.11
 aniso8601==3.0.2
+appdirs==1.4.3
+attrs==18.1.0
+Babel==2.6.0
+cached-property==1.4.3
 certifi==2018.8.13
 chardet==3.0.4
 click==6.7
+coverage==4.5.1
+defusedxml==0.5.0
+docutils==0.14
+flake8==3.5.0
 Flask==1.0.2
 Flask-RESTful==0.3.6
 idna==2.7
+imagesize==1.0.0
+isodate==0.6.0
 itsdangerous==0.24
 Jinja2==2.10
+lxml==3.7.3
 MarkupSafe==1.0
+mccabe==0.6.1
+mockito==1.1.0
+packaging==17.1
 pkginfo==1.4.2
 pybuilder==0.11.17
+pycodestyle==2.3.1
+pyflakes==1.6.0
+Pygments==2.2.0
+pypandoc==1.3.3
+pyparsing==2.2.0
 pytz==2018.5
 requests==2.19.1
 requests-toolbelt==0.8.0
 six==1.11.0
+snowballstemmer==1.2.1
+Sphinx==1.7.6
+sphinxcontrib-websupport==1.1.0
 tailer==0.4.1
 tblib==1.3.2
 tqdm==4.24.0
 twine==1.11.0
+unittest-xml-reporting==2.2.0
 urllib3==1.23
 Werkzeug==0.14.1
+xmltodict==0.11.0
+zeep==3.1.0
