--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@
 inova.port = 8080
 inova.host = 0.0.0.0
 inova.debug = True
-auth.username = inova
-auth.password = !nov@123
+auth.username =
+auth.password = 
