--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ six==1.11.0
 snowballstemmer==1.2.1
 Sphinx==1.7.6
 sphinxcontrib-websupport==1.1.0
+suds-py3==1.3.3.0
 tailer==0.4.1
 tblib==1.3.2
 tqdm==4.24.0
